Src\Changes.txt
Add new items to top.
(This summarizes all changes to all files under Src, including Src\Languages.)

2007-11-05 Kimmo
 BUG: [ 1824734 ] "About..." box still has 2006 copyright. :-(
  Src: Merge.rc
  Src/Languages/*: Merge*.rc

2007-11-01 Tim
 BUG: [ 1807897 ] Button to small in Dutch version
  Src/Languages/Dutch: MergeDutch.rc

2007-10-24 Kimmo
 PATCH: [ 1816220 ] Bugfix: current position in LocationBar "invisible"
  Submitted by xurux at sourceforge.net
  Src: LocationView.cpp

2007-10-21 Kimmo
 BUG: [ 1815859 ] Still considers Vista as Longhorn
  Src: ConfigLog.cpp

2007-10-11 Kimmo
 PATCH: [ 1810171 ] MergeChineseTraditional.rc of 2.6.12 updated
  Submitted by Wei-cheng
  Src/Languages/ChineseTraditional: MergeChineseTraditional.rc
 PATCH: [ 1810539 ] ShellExtensionChineseTraditional.rc for 2.6.12 updated
  Submitted by Wei-cheng
  ShellExtension/Languages: ShellExtensionChineseTraditional.rc

2007-09-26 2.6.12 Stable Release (R4567)

 Fixed uninstalling bug (BUG: [ 1802179 ] Runtime error on uninstalling 2.6.10)
 Withdrawn 2.6.10 release due to above bug

2007-09-25 2.6.10 Stable Release (R4561)

2007-09-18 Kimmo
 BUG: [ 1791351 ] Go To Line Number does not change pane focus.
  Src: MergeEditView.cpp

2007-09-17 Takashi
 BUG: [ 1795814 ] When word wrap+scroll to first are on, it fails to scroll
  Src: MergeDoc.cpp

2007-09-15 Kimmo
 BUG: [ 1777054 ] Next difference sometimes not seen with Wrap Lines enabled
  Src: MergeEditView.cpp MergeEditView.h
 BUG: [ 1787816 ] Bug in File Rename
  Src: DirActions.cpp
 BUG: [ 1776487 ] REPLACE dialog, copy highlighted text to FIND fileld
  Src/editlib: ccrystaleditview.cpp

2007-08-22 Tim
 PATCH: [ 1743623 ] ChineseSimplified language .rc file for trunk rev.4317
  Src/Languages/ChineseSimplified: MergeChineseSimplified.rc

2007-08-22 Takashi
 BUG: [ 1759793 ] Filter test dialog problem with directory filters
  Src: TestFilterDlg.cpp

2007-08-12 Tim